--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,9 +7,12 @@ environment:
   sdk: ^3.5.3
 
 dependencies:
+  dio: ^5.7.0
   flutter:
     sdk: flutter
   go_router: ^14.6.1
+  provider: ^6.1.2
+  shared_preferences: ^2.3.3
 
 dev_dependencies:
   flutter_test:
